--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,7 +36,8 @@ ci_template: &CI_TEMPLATE
     ( $CIRRUS_REPO_NAME == 'zeek' &&
       (
       $CIRRUS_BRANCH == 'master' ||
-      $CIRRUS_BRANCH =~ 'release/.*'
+      $CIRRUS_BRANCH =~ 'release/.*' ||
+      $CIRRUS_BRANCH == 'topic/timw/386-clang-format'
       )
     )
 
